He subido nuevos cambios Simple y Complex del ejercicio

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id = "generador"></div>
-    <script src="hola.js" type="text/javascript"></script>
+<a href="simple.html">SIMPLE GENERATOR</a>
+<br/>
+<br/>
+<br/>
+<a href="complex.html">COMPLEX GENERATOR</a>
+
 
 </body>
 </html>
